fix: corrige configuración en propertie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=security
+# MySQL
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.dbcp2.driver-class-name=${DB_DRIVER}
+spring.jpa.database-platform=${DB_PLATFORM}
+# JWT Secret Key
+spring.security.jwt.private.key=${SPRING_SECURITY_PRIVATE_KEY}
+
+# Gmail SMTP
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${MAIL_PROPERTIES_MAIL_SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE}
+
+# Google OAuth2
+spring.security.oauth2.client.registration.google.client-id=${SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET}
+# Redis
+spring.redos.host=${REDIS_HOST}
+spring.redos.port=${REDIS_PORT}
